src/test/ui/issues/issue-37051.stderr
error: compilation successful
  --> $DIR/issue-37051.rs:18:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

